# linears

./: .aimeta  .gitignore  Cargo.toml  DEVELOPMENT.md  PRD.md  README.md  app_spec.txt  claude-progress.txt  init.sh  test_5xx_retry.sh  test_absolute_date.sh  test_all_pagination.sh  test_archive_idempotent.sh  test_auth_header.sh  test_case_insensitive.sh  test_colors.sh  test_comment_crud.sh  test_default_output.sh  test_default_pagination.sh  test_default_preset.sh  test_delete_cascade.sh  test_double_delete.sh  test_duplicate_create.sh  test_edition.sh  test_empty_filter.sh  test_empty_results.sh  test_empty_search.sh  test_env_endpoint.sh  test_env_output.sh  test_error_envelope.sh  test_error_messages.sh  test_exit_codes.sh  test_expand.sh  test_feedback.sh  test_file_input.sh  test_file_not_found.sh  test_filter.sh  test_filter_and.sh  test_filter_deleted.sh  test_filter_or.sh  (+61 more)
.archives/: INITIAL-PRD.md
prompts/: .spec_status.json  app_spec.txt  initializer_prompt.md
schemas/linear/: schema.meta.json
src/: lib.rs  main.rs  progress.rs  schema_diff.rs
src/cli/: mod.rs
src/client/: mod.rs
src/commands/: discovery.rs  mod.rs  mutation.rs  query.rs  schema.rs
src/common/: constants.rs  mod.rs  strings.rs  types.rs
src/mutation_builder/: mod.rs
src/query_builder/: mod.rs
src/render/: mod.rs
src/validate/: mod.rs
tests/: cli_integration.rs  integration_tests.rs  snapshot_tests.rs
tests/factories/: generated.rs  mod.rs
tests/snapshots/: snapshot_tests__get_queries.snap  snapshot_tests__key_mutations.snap  snapshot_tests__key_resources.snap  snapshot_tests__list_queries.snap  snapshot_tests__mutation_op_count.snap  snapshot_tests__mutation_ops.snap  snapshot_tests__mutation_queries.snap  snapshot_tests__resource_count.snap  snapshot_tests__resources.snap  snapshot_tests__search_plan.snap  snapshot_tests__search_queries.snap
tests/support/: mock_server.rs  mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
